@@ -8,7 +8,7 @@
   #:use-module (gnome gobject defs-support))
 
 (define-class <test-glib-wrapset> (<gobject-wrapset-base>)
-  #:id 'test-glib)
+  #:id 'test-glib #:dependencies '(standard gnome-glib))
 
 (define-method (global-declarations-cg (ws <test-glib-wrapset>))
   (list (next-method)
@@ -17,7 +17,5 @@
 (define-method (initialize (ws <test-glib-wrapset>) initargs)
   (next-method ws (append '(#:module (test-suite gw-test-glib)) initargs))
   
-  (depends-on! ws 'standard 'gnome-glib)
-
   (load-defs ws "test-suite/test-glib.defs"))
 
